[package]
name = "bluetooth-nostd"
version = "0.1.0"
edition = "2021"
authors = ["Matt Gates <matt@ridgecellrepair.com>"]
license = "MIT OR Apache-2.0"
description = "no_std Bluetooth HCI/L2CAP/GATT/HID driver in Rust"
repository = "https://github.com/suhteevah/bluetooth-nostd"
keywords = ["bluetooth", "hci", "gatt", "no_std", "bare-metal"]
categories = ["no-std", "hardware-support", "embedded"]
readme = "README.md"

[dependencies]
log = { version = "0.4", default-features = false }
spin = { version = "0.9", default-features = false }
